<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sub_font">font:</string>
    <string name="sub_position_v">position:</string>
    <string name="sub_color">color:</string>
    <string name="color_white">White</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_blue">Blue</string>
    <string name="sub_switch">switch:</string>
    <string name="sub_no_subtitle">No subtitle!</string>
    <string name="str_no_file">No file Found!</string>
    <string name="str_exit">exit</string>
    <string name="setting_resume">Resume Mode</string>
    <string name="setting_playmode">Play Mode</string>
    <string name="setting_playmode_repeatall">Repeat All</string>
    <string name="setting_playmode_repeatone">Repeat One</string>
    <string name="setting_audiotrack">Audio Track</string>
    <string name="setting_subtitle">Subtitle</string>
    <string name="setting_displaymode">Display Mode</string>
    <string name="setting_displaymode_normal">Normal</string>
    <string name="setting_displaymode_normal_noscaleup">No Scale Up</string>
    <string name="setting_displaymode_fullscreen">Full Screen</string>
    <string name="setting_brightness">Brightness</string>
    <string name="setting_3d_mode">Play 3D Mode</string>	
    <string name="setting_3d_diable">OFF</string> 
	<string name="setting_3d_grating_open">Open Grating</string> 
	<string name="setting_3d_grating_close">Close Grating</string> 
    <string name="setting_3d_auto">AUTO</string>  
    <string name="setting_3d_lr">L/R</string>
    <string name="setting_3d_bt">B/T</string>                                               
    <string name="setting_3d_2d_l">3D-2D-L</string>
    <string name="setting_3d_2d_r">3D-2D-R</string> 
    <string name="setting_3d_2d_t">3D-2D-T</string>
    <string name="setting_3d_2d_b">3D-2D-B</string>
		<string name="setting_3d_2d_auto1">3D-2D-AUTO1</string>
		<string name="setting_3d_2d_auto2">3D-2D-AUTO2</string> 
		<string name="setting_2d_3d">2D-3D</string> 
    <string name="setting_3d_field_depth">Field Depth</string> 
    <string name="setting_3d_auto_switch">Auto Switch</string> 
    <string name="setting_3d_lr_switch">LR Switch</string> 
		<string name="setting_3d_tb_switch">TB Switch</string>  
		<string name="setting_3d_full_off">scale2 off</string> 
		<string name="setting_3d_lr_full">L/R Half2Full</string> 
		<string name="setting_3d_tb_full">T/B Half2Full</string> 

    <string name="setting_play_chapters">Play Chapters</string>
    <string name="setting_chapters">Chapters</string>
    <string name="app_name">MoviePlayer</string>
    <string name="main_activity">MoviePlayer</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_time_null">00:00:00</string>
    <string name="str_resume_play">Resume this video from last position?</string>
    <string name="str_on">On</string>
    <string name="str_off">Off</string>
    <string name="str_about">About</string>
    <string name="str_file_information">File Information</string>
    <string name="str_file_name">Name</string>
    <string name="str_file_format">Format</string>
    <string name="str_file_size">Size</string>
    <string name="str_file_resolution">Resolution</string>
    <string name="str_file_duration">Duration</string>
	<string name="setting_audiochannel">Audio Chanel</string>
	<string name="str_left_auidochannel">Left Mono</string>
	<string name="str_right_auidochannel">Right Mono</string>
	<string name="str_stereo_auidochannel">Stereo</string>
	<string name="file_have_no_audio">file have no audio</string>
	
	<string name="memory_device_str">Internal Memory </string>
	<string name="sdcard_device_str">Local Disk</string>
	<string name="ext_sdcard_device_str">External TF Card</string>
	<string name="sata_device_str">SATA</string>
	<string name="usb_device_str">USB</string>
</resources>
