<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/BaseLayout2" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/transparent_background"> 
    
    <VideoView
        android:id="@+id/video_view"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
    </VideoView>

    <LinearLayout 
        android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/LinearLayout_sub" 
	    android:orientation="vertical" 
	    android:background="@drawable/minding_bk" 
	    android:layout_gravity="center"
	    android:gravity="center">
	    
	    <LinearLayout 
	        android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_title" 
			android:layout_gravity="center_horizontal">
			
			<TextView
			    android:id="@+id/TextView01" 
				android:gravity="center" 
				android:layout_height="56dp" 
				android:textSize="24sp" 
				android:layout_width="wrap_content" 
				android:text="@string/setting_subtitle" 
				android:textColor="@drawable/white">
			</TextView>
		</LinearLayout>
		
		<LinearLayout
		    android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_switch" 
			android:orientation="horizontal" 
			android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="60dp" 
		    android:layout_marginRight="60dp">
			
			<TextView
			    android:id="@+id/TextView01" 
				android:gravity="left|center" 
				android:layout_width="140dp" 
				android:layout_height="60dp" 
				android:textSize="24sp" 
				android:text="@string/sub_switch" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black">
			 </TextView>
			 
			 <ImageButton
			    android:id="@+id/switch_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			</ImageButton>
			
			<TextView 
			    android:layout_width="94dp" 
		     	android:gravity="center" 
		     	android:layout_height="60dp" 
		     	android:id="@+id/sub_swith111" 
		     	android:textSize="24sp" 
		     	android:textColor="@drawable/black">
		    </TextView>
		    
		    <ImageButton 
		        android:id="@+id/switch_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		    </ImageButton>
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:id="@+id/sub_font" 
		    android:orientation="horizontal" 
		    android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="60dp" 
		    android:layout_marginRight="60dp">
		    
		    <TextView
		        android:layout_width="140dp" 
				android:layout_height="60dp" 
				android:gravity="left|center" 
				android:textSize="24sp" 
				android:text="@string/sub_font" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black" 
				android:id="@+id/font_title">
			</TextView>
			<ImageButton 
			    android:id="@+id/font_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			</ImageButton>
			
			<TextView 
			    android:layout_width="94dp" 
		     	android:layout_height="60dp" 
		     	android:gravity="center" 
		     	android:textSize="24sp" 
		     	android:id="@+id/sub_font111" 
		     	android:textColor="@drawable/black">
		    </TextView>
		    <ImageButton 
		        android:id="@+id/font_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		    </ImageButton>
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_color" 
			android:orientation="horizontal" 
			android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="60dp" 
		    android:layout_marginRight="60dp">
			
			<TextView 
			    android:layout_width="140dp" 
				android:layout_height="60dp" 
				android:gravity="left|center" 
				android:textSize="24sp" 
				android:text="@string/sub_color" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black" 
				android:id="@+id/color_title">
			</TextView>
			
			<ImageButton 
			    android:id="@+id/color_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			</ImageButton>
			
			<TextView 
			    android:layout_width="94dp" 
		     	android:layout_height="60dp" 
		     	android:gravity="center" 
		     	android:textSize="24sp" 
		     	android:id="@+id/sub_color111" 
		     	android:textColor="@drawable/black">
		    </TextView>
		    
		    <ImageButton 
		        android:id="@+id/color_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		    </ImageButton>
		</LinearLayout>
				
		<LinearLayout 
		    android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/sub_position_v" 
			android:orientation="horizontal" 
			android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="60dp" 
		    android:layout_marginRight="60dp">
			
			<TextView 
			    android:layout_width="140dp" 
				android:layout_height="60dp" 
				android:gravity="left|center" 
				android:textSize="24sp" 
				android:text="@string/sub_position_v" 
				android:layout_marginLeft="6dp" 
				android:textColor="@drawable/black" 
				android:id="@+id/position_v_title">
			</TextView>
			
			<ImageButton 
			    android:id="@+id/position_v_l" 
				android:layout_width="72dp" 
				android:layout_height="60dp" 
				android:src="@drawable/sub_larrow">
			</ImageButton>
			
			<TextView 
			    android:layout_width="94dp" 
		     	android:layout_height="60dp" 
		     	android:gravity="center" 
		     	android:textSize="24sp" 
		     	android:id="@+id/sub_position_v111" 
		     	android:textColor="@drawable/black">
		    </TextView>
		    
		    <ImageButton 
		        android:id="@+id/position_v_r" 
		     	android:layout_width="72dp" 
		     	android:layout_height="60dp" 
		     	android:src="@drawable/sub_rarrow">
		    </ImageButton>
		</LinearLayout>
		
		<LinearLayout 
		    android:id="@+id/sub_ok_on" 
		    android:orientation="horizontal" 
			android:layout_height="match_parent" 
			android:layout_width="match_parent"
			android:layout_gravity="center" 
			android:gravity="center" >
			
			<Button 
			    android:id="@+id/button_ok" 
			    android:text="@string/str_ok" 
			    android:layout_width="120dp" 
			    android:layout_gravity="center" 
			    android:layout_marginRight="20dp" 
			    android:layout_height="wrap_content" 
			    android:textSize="24sp" 
			    android:textColor="@drawable/black">
			</Button>
			
			<Button 
			    android:id="@+id/button_canncel" 
				android:text="@string/str_cancel" 
				android:layout_width="120dp" 
				android:layout_gravity="center" 
				android:layout_height="wrap_content" 
				android:textSize="24sp" 
				android:textColor="@drawable/black">
			</Button>
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/LinearLayout_other" 
	    android:orientation="vertical" 
	    android:background="@drawable/minding_bk" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content" 
	    android:layout_gravity="center"
	    android:gravity="center">
	    <TextView 
	        android:layout_width="wrap_content" 
			android:id="@+id/more_title" 
			android:layout_gravity="center" 
			android:layout_height="56dp" 
			android:gravity="center" 
			android:textColor="@drawable/white" 
			android:textSize="24sp">
		</TextView>
		
		<ListView 
		    android:id="@+id/AudioListView" 
		    android:layout_width="340dp" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="4dp" 
		    android:layout_marginRight="4dp" 
		    android:layout_marginBottom="4dp" 
		    android:divider="@color/background" 
		    android:cacheColorHint="#00000000"
		    android:gravity="center">
		</ListView>
	</LinearLayout>
	
	<LinearLayout	
		android:id="@+id/dialog_layout"
		android:orientation="vertical"
		android:background="@drawable/dialog_bk" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center">
		
		<TextView
			android:id="@+id/info_title" 
			android:layout_gravity="center" 
			android:layout_width="wrap_content" 
			android:layout_height="54dp" 
			android:layout_marginLeft="60dp" 
			android:layout_marginRight="60dp"
			android:gravity="center" 
			android:textColor="@drawable/white" 
			android:textSize="20sp">
		</TextView>
		
		<LinearLayout	
		    android:orientation="vertical"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginLeft="60dp" 
		    android:layout_marginRight="60dp">
		
		    <TextView
			    android:id="@+id/filename" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18sp">
		    </TextView>
		    <TextView
			    android:id="@+id/filetype" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18sp"
			    android:layout_marginTop="2dp">
		    </TextView>
		    <TextView
			    android:id="@+id/filesize" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18sp"
			    android:layout_marginTop="2dp">
		    </TextView>
		    <TextView
			    android:id="@+id/resolution" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18sp"
			    android:layout_marginTop="2dp">
		    </TextView>
		    <TextView
			    android:id="@+id/duration" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:textColor="@drawable/white" 
			    android:textSize="18sp"
			    android:layout_marginTop="2dp">
		    </TextView>
		</LinearLayout>
		<LinearLayout	
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="52dp">
		    <Button
			    android:id="@+id/info_ok" 
			    android:layout_gravity="center" 
			    android:layout_width="120dp" 
			    android:layout_height="wrap_content" 
			    android:gravity="center" 
			    android:textColor="@drawable/black" 
			    android:textSize="20sp">
		    </Button>
		</LinearLayout>
	</LinearLayout>

    <FrameLayout
	    android:orientation="vertical" 
	    android:layout_height="fill_parent" 
	    android:layout_width="fill_parent">
	    <com.subtitleview.SubtitleView
	        android:id="@+id/subTitle_more_sm"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"	        
	        android:paddingBottom="8dip" 
 	        android:paddingLeft="6dip" 
		android:layout_gravity="bottom"
	        android:visibility="invisible">
	    </com.subtitleview.SubtitleView>
	    
	    <com.subtitleview.SubtitleView
	        android:id="@+id/subTitle_more"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
		android:layout_gravity="bottom"
	        android:paddingBottom="10dip">
	    </com.subtitleview.SubtitleView>
	    
	    <include layout="@layout/morebar" />
    </FrameLayout>
</FrameLayout>
